--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,10 @@
   "dependencies": {
     "oauth": "https://raw.githubusercontent.com/oauth-io/oauth-js/0.2.4/dist/oauth.min.js",
     "octokit": "https://raw.githubusercontent.com/punchagan/github/issues/octokit.js",
-    "jquery":"2.0.3",
-    "requirejs":"2.1.8"
+    "jquery": "~2.1.1",
+    "requirejs": "2.1.8"
+  },
+  "resolutions": {
+    "jquery": "~2.1.1"
   }
 }
